@@ -4,7 +4,6 @@ import static org.hl7.fhir.r4.model.DocumentReference.ReferredDocumentStatus.FIN
 import static org.hl7.fhir.r4.model.Enumerations.DocumentReferenceStatus.CURRENT;
 
 import java.io.BufferedInputStream;
-import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.security.PrivateKey;
@@ -13,8 +12,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Objects;
 
-import org.camunda.bpm.engine.delegate.BpmnError;
-import org.camunda.bpm.engine.delegate.DelegateExecution;
 import org.hl7.fhir.instance.model.api.IBaseBundle;
 import org.hl7.fhir.r4.model.Binary;
 import org.hl7.fhir.r4.model.Bundle;
@@ -29,132 +26,119 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
 
+import ca.uhn.fhir.rest.client.api.IGenericClient;
+import de.hsheilbronn.mi.utils.crypto.hpke.ReceiverPrivateKeyProvider;
 import de.medizininformatik_initiative.process.data_transfer.ConstantsDataTransfer;
+import de.medizininformatik_initiative.processes.common.crypto.CryptoService;
 import de.medizininformatik_initiative.processes.common.crypto.KeyProvider;
-import de.medizininformatik_initiative.processes.common.crypto.RsaAesGcmUtil;
-import de.medizininformatik_initiative.processes.common.fhir.client.FhirClientFactory;
-import de.medizininformatik_initiative.processes.common.mimetype.MimeTypeHelper;
 import de.medizininformatik_initiative.processes.common.util.ConstantsBase;
 import de.medizininformatik_initiative.processes.common.util.DataSetStatusGenerator;
-import dev.dsf.bpe.v1.ProcessPluginApi;
-import dev.dsf.bpe.v1.activity.AbstractServiceDelegate;
-import dev.dsf.bpe.v1.constants.NamingSystems;
-import dev.dsf.bpe.v1.variables.Variables;
+import de.medizininformatik_initiative.processes.common.util.MimeTypeHelper;
+import dev.dsf.bpe.v2.ProcessPluginApi;
+import dev.dsf.bpe.v2.activity.ServiceTask;
+import dev.dsf.bpe.v2.client.dsf.DelayStrategy;
+import dev.dsf.bpe.v2.client.dsf.DsfClient;
+import dev.dsf.bpe.v2.constants.NamingSystems;
+import dev.dsf.bpe.v2.error.ErrorBoundaryEvent;
+import dev.dsf.bpe.v2.service.DsfClientProvider;
+import dev.dsf.bpe.v2.service.FhirClientProvider;
+import dev.dsf.bpe.v2.variables.Variables;
 import jakarta.ws.rs.core.MediaType;
 
-public class DecryptValidateAndInsertData extends AbstractServiceDelegate implements InitializingBean
+public class DecryptValidateAndInsertData implements ServiceTask, InitializingBean
 {
 	private static final Logger logger = LoggerFactory.getLogger(DecryptValidateAndInsertData.class);
 
+	private final String fhirStoreId;
+	private final CryptoService cryptoService;
 	private final KeyProvider keyProvider;
-	private final MimeTypeHelper mimeTypeHelper;
-	private final FhirClientFactory fhirClientFactory;
 	private final DataSetStatusGenerator statusGenerator;
+	private final boolean dmseMailEnabled;
 
-	public DecryptValidateAndInsertData(ProcessPluginApi api, KeyProvider keyProvider, MimeTypeHelper mimeTypeHelper,
-			FhirClientFactory fhirClientFactory, DataSetStatusGenerator statusGenerator)
+	public DecryptValidateAndInsertData(String fhirStoreId, CryptoService cryptoService, KeyProvider keyProvider,
+			DataSetStatusGenerator statusGenerator, boolean dmseMailEnabled)
 	{
-		super(api);
-
+		this.fhirStoreId = fhirStoreId;
+		this.cryptoService = cryptoService;
 		this.keyProvider = keyProvider;
-		this.mimeTypeHelper = mimeTypeHelper;
-		this.fhirClientFactory = fhirClientFactory;
 		this.statusGenerator = statusGenerator;
+		this.dmseMailEnabled = dmseMailEnabled;
 	}
 
 	@Override
 	public void afterPropertiesSet() throws Exception
 	{
-		super.afterPropertiesSet();
-
+		Objects.requireNonNull(cryptoService, "cryptoService");
 		Objects.requireNonNull(keyProvider, "keyProvider");
-		Objects.requireNonNull(mimeTypeHelper, "mimeTypeHelper");
-		Objects.requireNonNull(fhirClientFactory, "fhirClientFactory");
 		Objects.requireNonNull(statusGenerator, "statusGenerator");
 	}
 
 	@Override
-	protected void doExecute(DelegateExecution execution, Variables variables)
+	public void execute(ProcessPluginApi api, Variables variables)
 	{
 		Task task = variables.getStartTask();
 
 		List<Resource> encryptedResources = variables
-				.getResourceList(ConstantsDataTransfer.BPMN_EXECUTION_VARIABLE_TRANSFER_DATA_RESOURCES);
-		String localOrganizationIdentifier = getLocalOrganizationIdentifier();
-		String sendingOrganizationIdentifier = getSendingOrganizationIdentifier(variables);
+				.getFhirResourceList(ConstantsDataTransfer.BPMN_EXECUTION_VARIABLE_TRANSFER_DATA_RESOURCES);
+		String dicIdentifier = getDicIdentifier(variables);
 		String projectIdentifier = variables
 				.getString(ConstantsDataTransfer.BPMN_EXECUTION_VARIABLE_PROJECT_IDENTIFIER);
 
 		logger.info(
-				"Decrypting, validating and inserting data-set from organization '{}' with project-identifier '{}' referenced in Task with id '{}'",
-				sendingOrganizationIdentifier, projectIdentifier, task.getId());
+				"Decrypting, validating and inserting data-set from organization '{}' and project-identifier '{}' in Task '{}'",
+				dicIdentifier, projectIdentifier, api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
 		try
 		{
-			ListResource resourceReferencesList = decryptValidateAndInsertResources(keyProvider.getPrivateKey(),
-					encryptedResources, sendingOrganizationIdentifier, localOrganizationIdentifier);
-			IdType documentReferenceId = createOrUpdateDocumentReference(sendingOrganizationIdentifier,
-					projectIdentifier, resourceReferencesList, task).toUnqualified();
+			ListResource resourceReferencesList = decryptValidateAndInsertResources(api, keyProvider.getPrivateKey(),
+					encryptedResources);
+			IdType documentReferenceId = createOrUpdateDocumentReference(api, dicIdentifier, projectIdentifier,
+					resourceReferencesList, task).toUnqualified();
 
-			logger.info(
-					"Stored data-set in DocumentReference with id '{}' on FHIR store with baseUrl '{}' from organization '{}' with project-identifier '{}' referenced in Task with id '{}'",
-					documentReferenceId, fhirClientFactory.getFhirBaseUrl(), sendingOrganizationIdentifier,
-					projectIdentifier, task.getId());
+			logger.info("Stored DocumentReference '{}' from organization '{}' and project-identifier '{}' in Task '{}'",
+					documentReferenceId, dicIdentifier, projectIdentifier,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
+			if (dmseMailEnabled)
+				sendMail(api, task, projectIdentifier, dicIdentifier, documentReferenceId);
 		}
 		catch (Exception exception)
 		{
-			task.setStatus(Task.TaskStatus.FAILED);
-			task.addOutput(statusGenerator.createDataSetStatusOutput(
-					ConstantsBase.CODESYSTEM_DATA_SET_STATUS_VALUE_RECEIVE_ERROR,
-					ConstantsDataTransfer.CODESYSTEM_DATA_TRANSFER,
-					ConstantsDataTransfer.CODESYSTEM_DATA_TRANSFER_VALUE_DATA_SET_STATUS,
-					"Decrypt, validate or insert data-set failed"));
-			variables.updateTask(task);
-
-			logger.warn(
-					"Could not decrypt, validate or insert data-set from organization '{}' and project-identifier '{}' referenced in Task with id '{}' - {}",
-					task.getRequester().getIdentifier().getValue(),
-					variables.getString(ConstantsDataTransfer.BPMN_EXECUTION_VARIABLE_PROJECT_IDENTIFIER), task.getId(),
+			logger.error(
+					"Decrypting, validating and inserting data-set from organization '{}' and project-identifier '{}' in Task '{}' failed - {} - throwing error boundary event",
+					dicIdentifier, projectIdentifier, api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task),
 					exception.getMessage());
 
-			String error = "Decrypt, validate or insert data-set failed - " + exception.getMessage();
-			throw new BpmnError(ConstantsDataTransfer.BPMN_EXECUTION_VARIABLE_DATA_RECEIVE_ERROR, error, exception);
+			String message = "Decrypt, validate or insert data-set failed" + ConstantsBase.EXCEPTION_MESSAGE_DIVIDER
+					+ exception.getMessage();
+			throw new ErrorBoundaryEvent(ConstantsBase.CODESYSTEM_DATA_SET_STATUS_VALUE_RECEIVE_ERROR, message);
 		}
 	}
 
-	private String getLocalOrganizationIdentifier()
-	{
-		return api.getOrganizationProvider().getLocalOrganizationIdentifierValue()
-				.orElseThrow(() -> new RuntimeException("LocalOrganizationIdentifierValue is null"));
-	}
-
-	private String getSendingOrganizationIdentifier(Variables variables)
+	private String getDicIdentifier(Variables variables)
 	{
 		return variables.getStartTask().getRequester().getIdentifier().getValue();
 	}
 
-	private ListResource decryptValidateAndInsertResources(PrivateKey privateKey, List<Resource> resources,
-			String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private ListResource decryptValidateAndInsertResources(ProcessPluginApi api, PrivateKey privateKey,
+			List<Resource> resources)
 	{
 		ListResource binaryList = new ListResource();
 
-		resources.stream().flatMap(r -> doDecryptValidateAndInsertResource(privateKey, r, sendingOrganizationIdentifier,
-				receivingOrganizationIdentifier).stream()).forEach(binaryList::addEntry);
+		resources.stream().flatMap(r -> doDecryptValidateAndInsertResource(api, privateKey, r).stream())
+				.forEach(binaryList::addEntry);
 
 		return binaryList;
 	}
 
-	private List<ListResource.ListEntryComponent> doDecryptValidateAndInsertResource(PrivateKey privateKey,
-			Resource resource, String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private List<ListResource.ListEntryComponent> doDecryptValidateAndInsertResource(ProcessPluginApi api,
+			PrivateKey privateKey, Resource resource)
 	{
 		List<ListResource.ListEntryComponent> binaryIds = new ArrayList<>();
 
 		if (resource instanceof ListResource list)
-			binaryIds.addAll(decryptValidateAndInsertDataStreams(list, privateKey, sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier));
+			binaryIds.addAll(decryptValidateAndInsertDataStreams(api, list, privateKey));
 		else if (resource instanceof Binary binary)
-			binaryIds.add(decryptValidateAndInsertDataResource(binary, privateKey, sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier));
+			binaryIds.add(decryptValidateAndInsertDataResource(api, binary, privateKey));
 		else
 			throw new RuntimeException(
 					"Expected resource type Binary or List, got '" + resource.getResourceType().name() + "'");
@@ -162,129 +146,125 @@ public class DecryptValidateAndInsertData extends AbstractServiceDelegate implem
 		return binaryIds;
 	}
 
-	private List<ListResource.ListEntryComponent> decryptValidateAndInsertDataStreams(ListResource list,
-			PrivateKey privateKey, String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private List<ListResource.ListEntryComponent> decryptValidateAndInsertDataStreams(ProcessPluginApi api,
+			ListResource list, PrivateKey privateKey)
 	{
 		return list.getEntry().stream().filter(ListResource.ListEntryComponent::hasItem)
 				.filter(e -> e.hasExtension(ConstantsDataTransfer.EXTENSION_LIST_ENTRY_MIMETYPE))
-				.map(e -> decryptValidateAndInsertDataStream(e, privateKey, sendingOrganizationIdentifier,
-						receivingOrganizationIdentifier))
-				.toList();
+				.map(e -> decryptValidateAndInsertDataStream(api, e, privateKey)).toList();
 	}
 
-	private ListResource.ListEntryComponent decryptValidateAndInsertDataStream(ListResource.ListEntryComponent item,
-			PrivateKey privateKey, String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private ListResource.ListEntryComponent decryptValidateAndInsertDataStream(ProcessPluginApi api,
+			ListResource.ListEntryComponent item, PrivateKey privateKey)
 	{
 		String mimeType = getMimeType(item);
-		InputStream inputStream = decryptDataStream(item, privateKey, sendingOrganizationIdentifier,
-				receivingOrganizationIdentifier);
-		validateDataStream(inputStream, mimeType);
-		return insertDataStream(inputStream, mimeType);
+		InputStream inputStream = decryptDataStream(api, item, privateKey);
+		inputStream = validateDataStream(api, inputStream, mimeType);
+		return insertDataStream(api, inputStream, mimeType);
 	}
 
-	private ListResource.ListEntryComponent decryptValidateAndInsertDataResource(Binary resource, PrivateKey privateKey,
-			String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private ListResource.ListEntryComponent decryptValidateAndInsertDataResource(ProcessPluginApi api, Binary resource,
+			PrivateKey privateKey)
 	{
-		Binary binary = decryptDataResource(resource, privateKey, sendingOrganizationIdentifier,
-				receivingOrganizationIdentifier);
-		validateDataResource(binary);
-		return insertDataResource(binary);
+		Binary binary = decryptDataResource(resource, privateKey);
+		validateDataResource(api, binary);
+		return insertDataResource(api, binary);
 	}
 
-	private InputStream decryptDataStream(ListResource.ListEntryComponent listEntry, PrivateKey privateKey,
-			String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private InputStream decryptDataStream(ProcessPluginApi api, ListResource.ListEntryComponent listEntry,
+			PrivateKey privateKey)
 	{
 		try
 		{
 			IdType url = (IdType) listEntry.getItem().getReferenceElement();
 
-			InputStream inputStream = api.getFhirWebserviceClientProvider().getWebserviceClient(url.getBaseUrl())
-					.withRetry(ConstantsBase.DSF_CLIENT_RETRY_6_TIMES, ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN)
+			InputStream inputStream = api.getDsfClientProvider().getByEndpointUrl(url.getBaseUrl())
+					.withRetry(ConstantsBase.DSF_CLIENT_RETRY_6_TIMES,
+							DelayStrategy.constant(ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN))
 					.readBinary(url.getIdPart(), MediaType.valueOf(MediaType.APPLICATION_OCTET_STREAM));
 
-			inputStream = RsaAesGcmUtil.decrypt(privateKey, inputStream, sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier);
-
-			if (!inputStream.markSupported())
-				inputStream = new BufferedInputStream(inputStream);
-
-			return inputStream;
+			ReceiverPrivateKeyProvider privateKeyProvider = _ -> privateKey;
+			return cryptoService.decrypt(inputStream, privateKeyProvider);
 		}
 		catch (Exception exception)
 		{
-			throw new RuntimeException(
-					"Could not decrypt downloaded data-set (inputstream) - " + exception.getMessage(), exception);
+			throw new RuntimeException("Could not decrypt downloaded data-set (inputstream)"
+					+ ConstantsBase.EXCEPTION_MESSAGE_DIVIDER + exception.getMessage(), exception);
 		}
 	}
 
-	private Binary decryptDataResource(Binary binary, PrivateKey privateKey, String sendingOrganizationIdentifier,
-			String receivingOrganizationIdentifier)
+	private Binary decryptDataResource(Binary binary, PrivateKey privateKey)
 	{
 		try
 		{
-			byte[] decrypted = RsaAesGcmUtil.decrypt(privateKey, binary.getData(), sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier);
+			ReceiverPrivateKeyProvider privateKeyProvider = _ -> privateKey;
+			byte[] decrypted = cryptoService.decrypt(binary.getData(), privateKeyProvider);
 
 			String mimeType = getMimeType(binary);
 			return new Binary().setData(decrypted).setContentType(mimeType);
 		}
 		catch (Exception exception)
 		{
-			throw new RuntimeException("Could not decrypt downloaded data-set (resource) - " + exception.getMessage(),
-					exception);
+			throw new RuntimeException("Could not decrypt downloaded data-set (resource)"
+					+ ConstantsBase.EXCEPTION_MESSAGE_DIVIDER + exception.getMessage(), exception);
 		}
 	}
 
-	private void validateDataStream(InputStream inputStream, String mimeType)
+	private InputStream validateDataStream(ProcessPluginApi api, InputStream inputStream, String mimeType)
 	{
-		try
-		{
-			mimeTypeHelper.validate(inputStream, mimeType);
-		}
-		catch (IOException e)
-		{
-			throw new RuntimeException(e);
-		}
+		if (!inputStream.markSupported())
+			inputStream = new BufferedInputStream(inputStream);
+
+		api.getMimeTypeService().validateWithException(inputStream, mimeType);
+
+		return inputStream;
 	}
 
-	private void validateDataResource(Binary binary)
+	private void validateDataResource(ProcessPluginApi api, Binary binary)
 	{
-		String mimeType = mimeTypeHelper.getMimeType(binary);
-		byte[] data = mimeTypeHelper.getData(binary);
-		mimeTypeHelper.validate(data, mimeType);
+		String mimeType = MimeTypeHelper.getMimeType(binary);
+		byte[] data = MimeTypeHelper.getData(api.getFhirContext(), binary);
+		api.getMimeTypeService().validateWithException(data, mimeType);
 	}
 
-	private ListResource.ListEntryComponent insertDataStream(InputStream inputStream, String mimeType)
+	private ListResource.ListEntryComponent insertDataStream(ProcessPluginApi api, InputStream inputStream,
+			String mimeType)
 	{
 		try (InputStream in = inputStream)
 		{
-			IdType id = (IdType) fhirClientFactory.getBinaryStreamFhirClient().create(in, mimeType).getId();
-			return createListEntryComponent(id, mimeType);
+			DsfClient client = getDsfClientForFhirStore(api.getDsfClientProvider(), fhirStoreId);
+			IdType id = client.withMinimalReturn().createBinary(in, MediaType.valueOf(mimeType),
+					client.getBaseUrl() + "/DocumentReference");
+			return createListEntryComponent(client.getBaseUrl(), id, mimeType);
 		}
 		catch (Exception exception)
 		{
-			throw new RuntimeException("Could not insert data-set attachment (inputstream) - " + exception.getMessage(),
-					exception);
+			throw new RuntimeException("Could not insert data-set attachment (inputstream)"
+					+ ConstantsBase.EXCEPTION_MESSAGE_DIVIDER + exception.getMessage(), exception);
 		}
 	}
 
-	private ListResource.ListEntryComponent insertDataResource(Binary binary)
+	private ListResource.ListEntryComponent insertDataResource(ProcessPluginApi api, Binary binary)
 	{
 		try
 		{
-			Resource resource = getResourceFromBytes(binary.getData(), binary.getContentType());
-			IdType id = (IdType) fhirClientFactory.getStandardFhirClient().create(resource).getId();
-			return createListEntryComponent(id, binary.getContentType());
+			Resource resource = getResourceFromBytes(api, binary.getData(), binary.getContentType());
+			DsfClient client = getDsfClientForFhirStore(api.getDsfClientProvider(), fhirStoreId);
+			IdType id = client.create(resource).getIdElement();
+			return createListEntryComponent(client.getBaseUrl(), id, binary.getContentType());
 		}
 		catch (Exception exception)
 		{
-			throw new RuntimeException("Could not insert data-set attachment (resource) - " + exception.getMessage(),
-					exception);
+			throw new RuntimeException("Could not insert data-set attachment (resource)"
+					+ ConstantsBase.EXCEPTION_MESSAGE_DIVIDER + exception.getMessage(), exception);
 		}
 	}
 
-	private ListResource.ListEntryComponent createListEntryComponent(IdType id, String mimetype)
+	private ListResource.ListEntryComponent createListEntryComponent(String baseUrl, IdType id, String mimetype)
 	{
+		if (!id.hasBaseUrl())
+			id = new IdType(baseUrl, id.getResourceType(), id.getIdPart(), id.getVersionIdPart());
+
 		ListResource.ListEntryComponent entry = new ListResource.ListEntryComponent();
 		entry.getItem().setReference(id.getValue());
 		entry.addExtension().setUrl(ConstantsDataTransfer.EXTENSION_LIST_ENTRY_MIMETYPE)
@@ -293,7 +273,7 @@ public class DecryptValidateAndInsertData extends AbstractServiceDelegate implem
 		return entry;
 	}
 
-	private Resource getResourceFromBytes(byte[] data, String mimeType)
+	private Resource getResourceFromBytes(ProcessPluginApi api, byte[] data, String mimeType)
 	{
 		if ("application/fhir+xml".equals(mimeType))
 			return (Resource) api.getFhirContext().newXmlParser()
@@ -305,45 +285,49 @@ public class DecryptValidateAndInsertData extends AbstractServiceDelegate implem
 			return new Binary().setData(data).setContentType(mimeType);
 	}
 
-	private IdType createOrUpdateDocumentReference(String sendingOrganization, String projectIdentifier,
-			ListResource resourceReferencesList, Task task)
+	private IdType createOrUpdateDocumentReference(ProcessPluginApi api, String sendingOrganization,
+			String projectIdentifier, ListResource resourceReferencesList, Task task)
 	{
-		List<DocumentReference> existingDocumentReferences = searchExistingDocumentReferences(sendingOrganization,
-				projectIdentifier, task.getId());
+		List<DocumentReference> existingDocumentReferences = searchExistingDocumentReferences(api, sendingOrganization,
+				projectIdentifier, task);
 
 		if (existingDocumentReferences.isEmpty())
 		{
 			logger.info(
-					"DocumentReference for project-identifier '{}' authored by '{}' does not exist yet, creating a new one on FHIR server with baseUrl '{}' referenced in Task with id '{}'",
-					projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(), task.getId());
-			return createDocumentReference(sendingOrganization, projectIdentifier, resourceReferencesList);
+					"DocumentReference of organization {} and project-identifier '{}' does not exist yet, creating a new one on FHIR server '{}' in Task '{}'",
+					sendingOrganization, projectIdentifier, fhirStoreId,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
+			return createDocumentReference(api, sendingOrganization, projectIdentifier, resourceReferencesList);
 		}
 		else
 		{
 			if (existingDocumentReferences.size() > 1)
 				logger.warn(
-						"Found more than one DocumentReference for project-identifier '{}' authored by '{}' on FHIR server with baseUrl '{}' referenced in Task with id '{}', using the first '{}'",
-						projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(),
-						existingDocumentReferences.get(0).getId(), task.getId());
+						"Found more than one DocumentReference of organization '{}' for project-identifier '{}' on FHIR server '{}' in Task '{}', using the first '{}'",
+						sendingOrganization, projectIdentifier, fhirStoreId,
+						existingDocumentReferences.getFirst().getId(),
+						api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
 			logger.info(
-					"DocumentReference for project-identifier '{}' authored by '{}' already exists, updating data-set on FHIR server with baseUrl '{}' referenced in Task with id '{}'",
-					projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(), task.getId());
+					"DocumentReference of organization '{}' and project-identifier '{}' already exists, updating data-set on FHIR server '{}' in Task '{}'",
+					sendingOrganization, projectIdentifier, fhirStoreId,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
-			return updateDocumentReference(existingDocumentReferences.get(0), resourceReferencesList);
+			return updateDocumentReference(api, existingDocumentReferences.getFirst(), resourceReferencesList);
 		}
 	}
 
-	private List<DocumentReference> searchExistingDocumentReferences(String sendingOrganization,
-			String projectIdentifier, String taskId)
+	private List<DocumentReference> searchExistingDocumentReferences(ProcessPluginApi api, String sendingOrganization,
+			String projectIdentifier, Task task)
 	{
 		// workaround since not all fhir server used in MII support DocumentReference.author:identifier or
 		// DocumentReference.author:Organization.identifier search parameters. Therefore, filtering for author
 		// after loading all DocumentReferences for given project-identifier
 		try
 		{
-			Bundle searchResult = fhirClientFactory.getStandardFhirClient().getGenericFhirClient().search()
-					.forResource(DocumentReference.class)
+			IGenericClient client = getFhirClientForFhirStore(api.getFhirClientProvider(), fhirStoreId);
+
+			Bundle searchResult = client.search().forResource(DocumentReference.class)
 					.where(DocumentReference.IDENTIFIER.exactly()
 							.systemAndCode(ConstantsBase.NAMINGSYSTEM_MII_PROJECT_IDENTIFIER, projectIdentifier))
 					.returnBundle(Bundle.class).execute();
@@ -351,8 +335,7 @@ public class DecryptValidateAndInsertData extends AbstractServiceDelegate implem
 			List<Bundle.BundleEntryComponent> entries = new ArrayList<>(searchResult.getEntry());
 			while (searchResult.getLink(IBaseBundle.LINK_NEXT) != null)
 			{
-				searchResult = fhirClientFactory.getStandardFhirClient().getGenericFhirClient().loadPage()
-						.next(searchResult).execute();
+				searchResult = client.loadPage().next(searchResult).execute();
 				entries.addAll(searchResult.getEntry());
 			}
 
@@ -367,14 +350,14 @@ public class DecryptValidateAndInsertData extends AbstractServiceDelegate implem
 		catch (Exception exception)
 		{
 			logger.warn(
-					"Error while searching for existing DocumentReferences for project-identifier '{}' authored by '{}' on FHIR server with baseUrl '{}' in Task with id '{}'- {}",
-					projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(), taskId,
-					exception.getMessage());
+					"Error while searching DocumentReferences of organization '{}' for project-identifier '{}' on FHIR server '{}' in Task '{}'- {}",
+					sendingOrganization, projectIdentifier, fhirStoreId,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task), exception.getMessage());
 			return List.of();
 		}
 	}
 
-	private IdType createDocumentReference(String sendingOrganization, String projectIdentifier,
+	private IdType createDocumentReference(ProcessPluginApi api, String sendingOrganization, String projectIdentifier,
 			ListResource resourceReferencesList)
 	{
 		DocumentReference documentReference = new DocumentReference().setStatus(CURRENT).setDocStatus(FINAL);
@@ -386,20 +369,21 @@ public class DecryptValidateAndInsertData extends AbstractServiceDelegate implem
 
 		addAttachmentsToDocumentReference(documentReference, resourceReferencesList);
 
-		IdType documentReferenceId = (IdType) fhirClientFactory.getStandardFhirClient().create(documentReference)
-				.getResource().getIdElement();
+		IdType documentReferenceId = (IdType) getFhirClientForFhirStore(api.getFhirClientProvider(), fhirStoreId)
+				.create().resource(documentReference).execute().getId();
 
-		return getDmsFhirStoreAbsoluteId(documentReferenceId);
+		return getDmsFhirStoreAbsoluteId(api, documentReferenceId);
 	}
 
-	private IdType updateDocumentReference(DocumentReference documentReference, ListResource resourceReferencesList)
+	private IdType updateDocumentReference(ProcessPluginApi api, DocumentReference documentReference,
+			ListResource resourceReferencesList)
 	{
 		addAttachmentsToDocumentReference(documentReference, resourceReferencesList);
 
-		fhirClientFactory.getStandardFhirClient().getGenericFhirClient().update().resource(documentReference)
+		getFhirClientForFhirStore(api.getFhirClientProvider(), fhirStoreId).update().resource(documentReference)
 				.withId(documentReference.getIdElement().getIdPart()).execute();
 
-		return getDmsFhirStoreAbsoluteId(documentReference.getIdElement());
+		return getDmsFhirStoreAbsoluteId(api, documentReference.getIdElement());
 	}
 
 	private void addAttachmentsToDocumentReference(DocumentReference documentReference,
@@ -429,9 +413,43 @@ public class DecryptValidateAndInsertData extends AbstractServiceDelegate implem
 		return item.getExtensionString(ConstantsDataTransfer.EXTENSION_LIST_ENTRY_MIMETYPE);
 	}
 
-	private IdType getDmsFhirStoreAbsoluteId(IdType idType)
+	private IdType getDmsFhirStoreAbsoluteId(ProcessPluginApi api, IdType idType)
 	{
-		return new IdType(fhirClientFactory.getFhirBaseUrl(), idType.getResourceType(), idType.getIdPart(),
-				idType.getVersionIdPart());
+		return new IdType(getDsfClientForFhirStore(api.getDsfClientProvider(), fhirStoreId).getBaseUrl(),
+				idType.getResourceType(), idType.getIdPart(), idType.getVersionIdPart());
+	}
+
+	private DsfClient getDsfClientForFhirStore(DsfClientProvider provider, String fhirStoreId)
+	{
+		return provider.getById(fhirStoreId)
+				.orElseThrow(() -> new RuntimeException("DSF client '" + fhirStoreId + "' not configured"));
+	}
+
+	private IGenericClient getFhirClientForFhirStore(FhirClientProvider provider, String fhirStoreId)
+	{
+		return provider.getById(fhirStoreId)
+				.orElseThrow(() -> new RuntimeException("FHIR client '" + fhirStoreId + "' not configured"));
+	}
+
+	private void sendMail(ProcessPluginApi api, Task task, String projectIdentifier, String dicIdentifier,
+			IdType documentReferenceId)
+	{
+		String subject = "Data-set successfully received in process '"
+				+ ConstantsDataTransfer.PROCESS_NAME_FULL_DATA_RECEIVE + "'";
+		String message = "A data-set has been successfully downloaded and inserted in process '"
+				+ ConstantsDataTransfer.PROCESS_NAME_FULL_DATA_RECEIVE + "' and Task '"
+				+ api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task) + "' from organization '" + dicIdentifier
+				+ "' regarding project-identifier '" + projectIdentifier + "' with status code '"
+				+ ConstantsBase.CODESYSTEM_DATA_SET_STATUS_VALUE_RECEIVE_OK
+				+ "' and can be accessed using the following url:\n" + "- "
+				+ getDsfFhirServerAbsoluteId(api, documentReferenceId);
+
+		api.getMailService().send(subject, message);
+	}
+
+	private String getDsfFhirServerAbsoluteId(ProcessPluginApi api, IdType idType)
+	{
+		return new IdType(api.getDsfClientProvider().getLocal().getBaseUrl(), idType.getResourceType(),
+				idType.getIdPart(), idType.getVersionIdPart()).getValue();
 	}
 }
